# musicbox

./: '  .gitignore  .vim-bookmarks  Makefile  README.md  README.zh-CN.md  flutter_jank_metrics_01.json  flutter_launcher_icons.yaml  flutter_native_splash.yaml  musicbox-builder.sh  musicbox.nix  nixos-build.sh  nixos-run.sh  pubspec.yaml  run-shell.nix  shell.nix
.github/workflows/: action.yml  action.yml.bak
android/: build.gradle  debug.keystore  release.keystore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/fonts/: iconfont.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/binding/: binding.dart
lib/components/: home_drawer.dart  neubox.dart  setting_switch.dart
lib/lang/: controller.dart  en.dart  translation_service.dart  zh.dart
lib/models/: about_controller.dart  albums.dart  audio_session_controller.dart  backup_recover_controller.dart  db.dart  db_controller.dart  find_controller.dart  lyric_controller.dart  msg_center_controller.dart  player_controller.dart  player_tile_controller.dart  playlist_controller.dart  setting_controller.dart  song.dart  util.dart
lib/pages/: about.dart  donate.dart  feedback.dart  find.dart  home.dart  landing.dart  lyric.dart  manage.dart  nofound.dart  search.dart  settings.dart  song.dart
lib/pages/setting/: find.dart  proxy.dart  settings.dart
lib/routes/: routes.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: bilibili.dart  data.dart  db.dart  hello.dart  log.dart  lyric.dart  msg_center.dart  util.dart  video_info.dart  youtube.dart
lib/src/rust/api/bilibili/: bilibili.dart
lib/src/rust/api/data/: bilibili.dart
lib/theme/: controller.dart  theme.dart
lib/widgets/: neubox.dart  nodata.dart  searchbar.dart  setting_entry.dart  setting_switch.dart  textedit.dart  track_shape.dart  vslider.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  Makefile
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: bilibili.rs  data.rs  db.rs  hello.rs  log.rs  lyric.rs  mod.rs  msg_center.rs  simple.rs  util.rs  video_info.rs  youtube.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_musicbox.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_musicbox.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
