[package]
name = "rust_lib_musicbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
url = "2.5"
anyhow = "1.0"
regex = "1.10"
chrono = "0.4"
scraper = "0.19"
serde_json = "1.0"
lazy_static = "1.4"
tokio-stream = "0.1"
serde_path_to_error = "0.1"
flutter_rust_bridge = "=2.1.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
reqwest = { version = "0.12", features = [
  "native-tls-vendored",
  "json",
  "socks",
  "stream",
] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
